UX: Allow users to filter categories in edit sidebar categories modal (#21996)
What does this change do?

This change is a continuation of
2191b879c693f898bf7602b4f9ab6780b1eead67 and adds an input filter to the
edit sidebar categories modal which the user can use to filter through
the list of categories by the category's name.

Note that if a child category is being shown, all of its ancestors will
be shown even if the names of the ancestors do not match the given
filter. This is to ensure that we continue to display the hierarchy of a
child category even if the parent category does not match the filter.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4425,8 +4425,8 @@ en:
       categories_form:
         save: "Save"
         title: "Edit categories navigation"
-        filter_input:
-          placeholder: "Filter categories"
+        filter_placeholder: "Filter categories"
+        no_categories: "There are no categories matching the given term."
 
       sections:
         custom:
