UX: show tooltip for global nav section icon (#21974)

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4534,6 +4534,7 @@ en:
               content: "Review"
               title: "Flagged posts and other queued items"
               pending_count: "%{count} pending"
+        global_section: "Global section, visible to everyone"
 
     welcome_topic_banner:
       title: "Create your Welcome Topic"
